<resources>
    <string name="app_name">Rehoboth Geet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="app_name_subtext">Bethel AG Hindi Service \nDoha, Qatar</string>

    <string name="pref_note_naming_english">English</string>
    <string name="pref_note_naming_northern">Northern European</string>
    <string name="pref_note_naming_southern">Southern European</string>

    <string name="pref_scheme">color_scheme</string>
    <string name="pref_note_naming">note_naming</string>
    <string name="pref_note_naming_value_english">English</string>
    <string name="pref_note_naming_default">@string/pref_note_naming_value_english</string>

    <string name="pref_text_size">text_size</string>
    <string name="pref_text_size_title">Text Size</string>

    <string name="text_size_xsmall_value">XS</string>
    <string name="text_size_small_value">S</string>
    <string name="text_size_medium_value">M</string>
    <string name="text_size_large_value">L</string>
    <string name="text_size_xlarge_value">XL</string>

    <string name="text_size_xsmall_name">Extra Small (8pt)</string>
    <string name="text_size_small_name">Small (10pt)</string>
    <string name="text_size_medium_name">Medium (12pt)</string>
    <string name="text_size_large_name">Large (14pt)</string>
    <string name="text_size_xlarge_name">Extra Large (16pt)</string>

    <string name="pref_scheme_dark">Dark</string>
    <string name="pref_scheme_light">Light</string>

    <string name="stopping">Stopping...</string>
    <string name="transposing">Transposing</string>
    <string name="please_wait">Please wait...</string>
    <string name="loading_title">Loading</string>

    <string name="no_guitar_chord_available">No guitar fingering available.</string>
    <string name="variation">Var.</string>
    <string name="capo_title">Capo on Fret:</string>
    <string name="transpose_title">Transpose (half-steps):</string>
    <string name="transpose">Transpose</string>

    <string name="menu_home">Home</string>
    <string name="menu_lyrics">Lyrics</string>
    <string name="menu_chordsheets">Chordsheets</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>

    <!--    <string name="menu_home">HOME</string>-->
    <!--    <string name="menu_lyrics">LYRICS</string>-->
    <!--    <string name="menu_chordsheets">CHORDS</string>-->
    <!--    <string name="menu_search">SEARCH</string>-->
    <!--    <string name="menu_favorites">FAVORITES</string>-->
    <!--    <string name="menu_settings">SETTINGS</string>-->

    <string name="no_internet">No internet connection</string>
    <string name="something_went_wrong">Something went wrong, Please try again.</string>
    <string name="server_conn_lost">Server connection lost, Please try again.</string>

    <string name="search_main_title">What can we search for you?</string>
    <string name="search_box_text">Search for songs...</string>
    <string name="search_button">SEARCH</string>

    <string name="action_mark_saved">Mark saved</string>
    <string name="action_mark_unsaved">Mark unsaved</string>
    <string name="action_search">Search</string>
    <string name="action_fullscreen_lyrics">Fullscreen Lyrics</string>
    <string name="action_font_size">Font Size</string>
    <string name="action_auto_scroll">Auto Scroll</string>
    <string name="action_transpose">Transpose</string>
    <string name="action_share">Share</string>
    <string name="action_share_text">Share as Text</string>
    <string name="action_share_pdf">Share as PDF</string>

    <string name="confirm_chords">Confirm Chords</string>

    <string name="choose_font_size">Choose Font Size</string>
    <string name="auto_scroll_setup">Auto Scroll Setup</string>
    <string name="sample_text">This is sample text. Check text size here.</string>
    <string name="sample_text_settings">This is sample text line 1. \nThis is sample text line 2. \nThis is sample text line 3. \nThis is sample text line 4. \nCheck text size here.</string>

    <string name="done">Done</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="mode_light">Light</string>
    <string name="mode_dark">Dark</string>
    <string name="dark_mode_active">Dark mode active.</string>
    <string name="light_mode_active">Light mode active.</string>

    <string name="transpose_chords">Transpose Chords</string>
    <string name="line_per_second">line / second</string>
    <string name="second">second</string>

    <string name="no_internet_connection">No internet connection.</string>
    <string name="connect_to_internet">No internet connection available, Please connect to internet and restart the application.</string>
    <string name="song_data_not_found">Song data not found.</string>
    <string name="app_not_found_for_sharing">Suitable app not found for sharing.</string>

    <string name="lyrics">Lyrics</string>
    <string name="chordsheets">Chordsheets</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="settings_dark_theme">Dark Theme</string>
    <string name="settings_font_size">Font Size</string>
    <string name="settings_font_size_subtext">Adjust font size here.</string>
    <string name="settings_auto_scroll">Auto Scroll</string>
    <string name="settings_auto_scroll_subtext">Set auto scroll speed here.</string>
    <string name="settings_share">Share</string>
    <string name="settings_share_subtext">Share app with others.</string>
    <string name="settings_rate_us">Rate Us</string>
    <string name="settings_rate_us_subtext">Please rate &amp; encourage us.</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_about_us_subtext">Know about us.</string>
    <string name="end_of_song">End of song.</string>
    <string name="auto_scroll_initial_delay">Auto scroll initial delay</string>
    <string name="auto_scroll_speed">Auto scroll speed</string>
    <string name="share_using">Share using"</string>

    <string name="who_we_are_title">WHO WE ARE</string>
    <string name="who_we_are_description">‘Rehoboth’ the title used for this song book is taken from Genesis 26:22,
        which means that Lord has broadened our space &amp; the enemy can no longer claim our blessings.
        I thank the Lord for enabling Bethel AG Hindi Service, Qatar to release an application called ‘Rehoboth Geet’ for the glory of God.
        \n\nExodus 15:2 – The Lord is my strength and my song and He has become my salvation. Worship is all about singing His due praise.
        Songs have always uplifted &amp; strengthened our souls. Let the word dwell within us in its full richness that when we admonish each
        other with songs we serve the very purpose of our creation.
        \n\nMartin Luther said, ‘The gift of language combined with the gift of song was given to man that he should proclaim the word of God through music.’
        \n\nMay the songs compiled in this APP be used to bring deeper connection with our God &amp; be used to proclaim Him;
</string>

    <string name="senior_pastor">Pr. P M George \nSenior Pastor:</string>
    <string name="pastor">Pr.Anish Babu \nPastor: Bethel AG Hindi Service</string>

    <string name="contact_us_title">CONTACT US</string>
    <string name="contact_us_description">For any issues, concerns or questions related to this application,
        you can contact us via below mentioned details.</string>
    <string name="contact_us_address">Pr Anish Babu \nBethel AG Hindi Service \nDoha, State of Qatar \nP.O Box no: 9102</string>
    <string name="contact_us_email_id">aghindiservice@yahoo.com</string>
    <string name="contact_us_mobile_no">+974-55977683</string>

    <string name="favorites_empty_title">Oops! Your favorites list is empty</string>
    <string name="favorites_empty_text">Looks like you haven\'t added anything to your favorites list yet</string>
    <string name="browse_lyrics">Browse Lyrics</string>
</resources>