<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_dayNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_launcher_round" />

        <com.music.chords.custom.MyTextViewBold
            android:id="@+id/tv_chooseMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_dayNight"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/choose_mode"
            android:textColor="@color/main_dark_text"
            android:textSize="18sp" />

        <belka.us.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/switch_dayNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_chooseMode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:cornerRadius="18dp"
            android:textSize="18sp"
            app:activeBgColor="@color/white"
            app:activeTextColor="@color/main_dark_text"
            app:inactiveBgColor="@color/color_divider"
            app:inactiveTextColor="@color/subtext"
            app:separatorColor="@color/gray_very_light"
            app:textToggleLeft="@string/mode_light"
            app:textToggleRight="@string/mode_dark"
            app:toggleWidth="120dp" />

        <!--        <com.music.chords.custom.MyTextViewBold-->
        <!--            android:id="@+id/tv_emtpy"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:textColor="@color/main_dark_text"-->
        <!--            android:textSize="16sp" />-->

        <LinearLayout
            android:id="@+id/ll_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rectangle_blue"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="8dp"
            android:paddingRight="30dp"
            android:paddingBottom="8dp">

            <com.music.chords.custom.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>