<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@mipmap/empty_favourites" />

    <LinearLayout
        android:layout_below="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <!--        <ImageView-->
        <!--            android:id="@+id/logo"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:src="@mipmap/empty_cart" />-->


        <com.music.chords.custom.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/favorites_empty_title"
            android:textColor="@color/main_dark_text"
            android:textSize="20sp" />

        <com.music.chords.custom.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/favorites_empty_text"
            android:textColor="@color/main_text"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll_browseLyrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rect_green_border"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="8dp"
            android:paddingRight="30dp"
            android:paddingBottom="8dp">

            <com.music.chords.custom.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/browse_lyrics"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
