<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <com.music.chords.custom.MyTextViewBold
            android:id="@+id/tv_initialDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/auto_scroll_initial_delay"
            android:textColor="@color/main_dark_text"
            android:textSize="16sp" />

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0.5dp"-->
<!--            android:layout_below="@+id/tv_textSize"-->
<!--            android:layout_margin="20dp"-->
<!--            android:background="@color/color_divider" />-->

        <com.music.chords.custom.MyTextView
            android:id="@+id/tv_initialDelaySeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/second"
            android:textColor="@color/main_dark_text"
            android:textSize="14sp" />

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/seekBar_initialDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isb_max="90"
            app:isb_min="1"
            app:isb_progress="1"
            app:isb_progress_value_float="false"
            app:isb_show_indicator="rounded_rectangle"
            app:isb_indicator_top_content_layout="@layout/layout_custom_seekbar_hint"
            app:isb_thumb_color="@color/colorAccent"
            app:isb_thumb_text_color="@color/white"
            app:isb_indicator_color="@color/scheme_dark_link"
            app:isb_track_progress_color="@color/colorAccent"
            android:layout_margin="20dp"
            android:layout_toLeftOf="@+id/iv_cancel"
            android:layout_toRightOf="@+id/iv_playPause"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/tv_initialDelay"
            android:layout_margin="20dp"
            android:background="@color/color_divider" />

        <com.music.chords.custom.MyTextViewBold
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/auto_scroll_speed"
            android:textColor="@color/main_dark_text"
            android:textSize="16sp" />

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0.5dp"-->
<!--            android:layout_below="@+id/tv_textSize"-->
<!--            android:layout_margin="20dp"-->
<!--            android:background="@color/color_divider" />-->

        <com.music.chords.custom.MyTextView
            android:id="@+id/tv_speedLinePerSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberPicker_textSize"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/line_per_second"
            android:textColor="@color/main_dark_text"
            android:textSize="14sp" />

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/seekBar_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isb_max="1"
            app:isb_min="0.1"
            app:isb_progress="0.1"
            app:isb_progress_value_float="true"
            app:isb_show_indicator="rounded_rectangle"
            app:isb_indicator_top_content_layout="@layout/layout_custom_seekbar_hint"
            app:isb_thumb_color="@color/colorAccent"
            app:isb_thumb_text_color="@color/white"
            app:isb_indicator_color="@color/scheme_dark_link"
            app:isb_track_progress_color="@color/colorAccent"
            android:layout_margin="20dp"
            android:layout_toLeftOf="@+id/iv_cancel"
            android:layout_toRightOf="@+id/iv_playPause"/>

        <!--        <com.music.chords.custom.MyTextViewBold-->
        <!--            android:id="@+id/tv_emtpy"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:textColor="@color/main_dark_text"-->
        <!--            android:textSize="16sp" />-->

        <LinearLayout
            android:id="@+id/ll_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_blue"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="8dp"
            android:paddingRight="30dp"
            android:paddingBottom="8dp">

            <com.music.chords.custom.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>